<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/iconback2"


    >

    <ImageView
        android:layout_margin="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/mundox96"


        />

    <EditText
        android:id="@+id/edtUsuario"
        style="@style/AppTheme.EditTextStyle"
        android:drawableStart="@drawable/vector_person"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/hint_Usuario"


        />

    <EditText
        android:id="@+id/edtPassword"
        style="@style/AppTheme.EditTextStyle"
        android:inputType="textPassword"
        android:drawableStart="@drawable/vector_lock"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/hint_password"


        />
    <Button
        android:id="@+id/btn_registar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/registro"
        android:textColor="@color/primaryTextColor"
        android:textSize="12sp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />



    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button

        android:id="@+id/btn_login"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="18sp"
        android:text="@string/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        />

    <Button
        android:id="@+id/btn_respass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/rest_pass"
        android:textColor="@color/primaryTextColor"
        android:textSize="10sp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />


</LinearLayout>